deploy: b2148cbf1f6864ba088f2f6922a56e62c090dbd8

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6ac089e8",
+   "id": "71c132e6",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f919e46",
+   "id": "abeb22a8",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61c6f2fe",
+   "id": "b6eb48a4",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58c51d35",
+   "id": "cf2ff140",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "873a18df",
+   "id": "3b331bf6",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7341e1cf",
+   "id": "e5607ef7",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "30c65755",
+   "id": "748a3a94",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:16:46.737890Z",
-     "iopub.status.busy": "2025-02-03T13:16:46.737713Z",
-     "iopub.status.idle": "2025-02-03T13:16:49.924400Z",
-     "shell.execute_reply": "2025-02-03T13:16:49.923836Z"
+     "iopub.execute_input": "2025-02-03T13:25:28.530135Z",
+     "iopub.status.busy": "2025-02-03T13:25:28.529935Z",
+     "iopub.status.idle": "2025-02-03T13:25:31.515377Z",
+     "shell.execute_reply": "2025-02-03T13:25:31.514855Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dcb0b9e",
+   "id": "f2491ea5",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af76991d",
+   "id": "a1bb1ff7",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a116debb",
+   "id": "85a089a2",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ec60d98",
+   "id": "9b078917",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ab95644",
+   "id": "3a437290",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f98528c6",
+   "id": "e296b9c5",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ddf2149",
+   "id": "81a7e42f",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83831dde",
+   "id": "bff32dd4",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4d0cf9e0",
+   "id": "3c157a21",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:16:49.926697Z",
-     "iopub.status.busy": "2025-02-03T13:16:49.926246Z",
-     "iopub.status.idle": "2025-02-03T13:16:51.952055Z",
-     "shell.execute_reply": "2025-02-03T13:16:51.951432Z"
+     "iopub.execute_input": "2025-02-03T13:25:31.517467Z",
+     "iopub.status.busy": "2025-02-03T13:25:31.517221Z",
+     "iopub.status.idle": "2025-02-03T13:25:33.409241Z",
+     "shell.execute_reply": "2025-02-03T13:25:33.408607Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56576a2d",
+   "id": "4ea86204",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f047b2ad",
+   "id": "53732189",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:16:51.953929Z",
-     "iopub.status.busy": "2025-02-03T13:16:51.953743Z",
-     "iopub.status.idle": "2025-02-03T13:16:51.957380Z",
-     "shell.execute_reply": "2025-02-03T13:16:51.956731Z"
+     "iopub.execute_input": "2025-02-03T13:25:33.411204Z",
+     "iopub.status.busy": "2025-02-03T13:25:33.410848Z",
+     "iopub.status.idle": "2025-02-03T13:25:33.414347Z",
+     "shell.execute_reply": "2025-02-03T13:25:33.413762Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d958105",
+   "id": "0122dce7",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66093306",
+   "id": "4f10ef69",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d41565b",
+   "id": "2642a4c1",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6098716",
+   "id": "40eef0fb",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c3fc8212",
+   "id": "cc2b606d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:16:51.959394Z",
-     "iopub.status.busy": "2025-02-03T13:16:51.959084Z",
-     "iopub.status.idle": "2025-02-03T13:16:52.004737Z",
-     "shell.execute_reply": "2025-02-03T13:16:52.004141Z"
+     "iopub.execute_input": "2025-02-03T13:25:33.416145Z",
+     "iopub.status.busy": "2025-02-03T13:25:33.415778Z",
+     "iopub.status.idle": "2025-02-03T13:25:33.458745Z",
+     "shell.execute_reply": "2025-02-03T13:25:33.458217Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a294bc0a",
+   "id": "68e9bf00",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cae442ab",
+   "id": "9ce9edfc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:16:52.006839Z",
-     "iopub.status.busy": "2025-02-03T13:16:52.006320Z",
-     "iopub.status.idle": "2025-02-03T13:16:52.078309Z",
-     "shell.execute_reply": "2025-02-03T13:16:52.077779Z"
+     "iopub.execute_input": "2025-02-03T13:25:33.460564Z",
+     "iopub.status.busy": "2025-02-03T13:25:33.460379Z",
+     "iopub.status.idle": "2025-02-03T13:25:33.526687Z",
+     "shell.execute_reply": "2025-02-03T13:25:33.526175Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1fe3313",
+   "id": "68d4f2ea",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3e980c2",
+   "id": "8dbbed43",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6d1eb077",
+   "id": "83d46c17",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:16:52.080645Z",
-     "iopub.status.busy": "2025-02-03T13:16:52.080034Z",
-     "iopub.status.idle": "2025-02-03T13:16:52.109317Z",
-     "shell.execute_reply": "2025-02-03T13:16:52.108710Z"
+     "iopub.execute_input": "2025-02-03T13:25:33.528838Z",
+     "iopub.status.busy": "2025-02-03T13:25:33.528435Z",
+     "iopub.status.idle": "2025-02-03T13:25:33.554920Z",
+     "shell.execute_reply": "2025-02-03T13:25:33.554347Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac3f1184",
+   "id": "c9b5f0da",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bc8276d",
+   "id": "14812332",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff511c5b",
+   "id": "53b23eca",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aad1060b",
+   "id": "31492db0",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01238da3",
+   "id": "6d5ed426",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f88f8889",
+   "id": "5cff8e12",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:16:52.111554Z",
-     "iopub.status.busy": "2025-02-03T13:16:52.111032Z",
-     "iopub.status.idle": "2025-02-03T13:16:52.115391Z",
-     "shell.execute_reply": "2025-02-03T13:16:52.114634Z"
+     "iopub.execute_input": "2025-02-03T13:25:33.557096Z",
+     "iopub.status.busy": "2025-02-03T13:25:33.556657Z",
+     "iopub.status.idle": "2025-02-03T13:25:33.560877Z",
+     "shell.execute_reply": "2025-02-03T13:25:33.560195Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ec8ff07",
+   "id": "695b0484",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4c5b49ec",
+   "id": "33ef971e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:16:52.117214Z",
-     "iopub.status.busy": "2025-02-03T13:16:52.116905Z",
-     "iopub.status.idle": "2025-02-03T13:16:52.119862Z",
-     "shell.execute_reply": "2025-02-03T13:16:52.119403Z"
+     "iopub.execute_input": "2025-02-03T13:25:33.562898Z",
+     "iopub.status.busy": "2025-02-03T13:25:33.562435Z",
+     "iopub.status.idle": "2025-02-03T13:25:33.565529Z",
+     "shell.execute_reply": "2025-02-03T13:25:33.564872Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a404beec",
+   "id": "8ab9deaa",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "aa47470c",
+   "id": "1242f231",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:16:52.121686Z",
-     "iopub.status.busy": "2025-02-03T13:16:52.121278Z",
-     "iopub.status.idle": "2025-02-03T13:16:54.706490Z",
-     "shell.execute_reply": "2025-02-03T13:16:54.706000Z"
+     "iopub.execute_input": "2025-02-03T13:25:33.567347Z",
+     "iopub.status.busy": "2025-02-03T13:25:33.566903Z",
+     "iopub.status.idle": "2025-02-03T13:25:36.095966Z",
+     "shell.execute_reply": "2025-02-03T13:25:36.095344Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11906e1b",
+   "id": "4ac898a7",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd4c02e0",
+   "id": "1053729b",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5b342f0",
+   "id": "0034618a",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df20d881",
+   "id": "aca825bf",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d8520e55",
+   "id": "689edb94",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:16:54.708655Z",
-     "iopub.status.busy": "2025-02-03T13:16:54.708454Z",
-     "iopub.status.idle": "2025-02-03T13:16:54.711774Z",
-     "shell.execute_reply": "2025-02-03T13:16:54.711311Z"
+     "iopub.execute_input": "2025-02-03T13:25:36.098231Z",
+     "iopub.status.busy": "2025-02-03T13:25:36.097719Z",
+     "iopub.status.idle": "2025-02-03T13:25:36.101248Z",
+     "shell.execute_reply": "2025-02-03T13:25:36.100752Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f572cf109a0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f8adfedbe20>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8114777",
+   "id": "b52a0ede",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f6f7c67",
+   "id": "87d4b1d5",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5460141",
+   "id": "81dfd9c7",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe50d93",
+   "id": "b3561912",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9be6cce7",
+   "id": "435a2957",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:16:54.713697Z",
-     "iopub.status.busy": "2025-02-03T13:16:54.713341Z",
-     "iopub.status.idle": "2025-02-03T13:16:54.716416Z",
-     "shell.execute_reply": "2025-02-03T13:16:54.715845Z"
+     "iopub.execute_input": "2025-02-03T13:25:36.103150Z",
+     "iopub.status.busy": "2025-02-03T13:25:36.102775Z",
+     "iopub.status.idle": "2025-02-03T13:25:36.105755Z",
+     "shell.execute_reply": "2025-02-03T13:25:36.105299Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "82ca0a51",
+   "id": "6df0fa77",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:16:54.718268Z",
-     "iopub.status.busy": "2025-02-03T13:16:54.717787Z",
-     "iopub.status.idle": "2025-02-03T13:16:55.784123Z",
-     "shell.execute_reply": "2025-02-03T13:16:55.783540Z"
+     "iopub.execute_input": "2025-02-03T13:25:36.107454Z",
+     "iopub.status.busy": "2025-02-03T13:25:36.107112Z",
+     "iopub.status.idle": "2025-02-03T13:25:37.160012Z",
+     "shell.execute_reply": "2025-02-03T13:25:37.159423Z"
     }
    },
    "outputs": [
