deploy: 6571144dd7a640f38497c1768854841f65dd2a6a

--- a/tutorials/i_linear_response.ipynb
+++ b/tutorials/i_linear_response.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "47b63531",
+   "id": "468009c3",
    "metadata": {},
    "source": [
     "# Linear response\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "524f712c",
+   "id": "f6f1ffc4",
    "metadata": {},
    "source": [
     "We will calculate the optical absorption in the random phase approximation (RPA) and compare it to time-domain simulations in the linear response regime, subject to a weak external field. Note, however, that the time-domain simulaton is not limited to the linear-response case, as demonstrated in [Cox et al.](https://www.nature.com/articles/ncomms6725)."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0606bc77",
+   "id": "d1b66164",
    "metadata": {},
    "source": [
     "## RPA"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "763b13e5",
+   "id": "ed2b6019",
    "metadata": {},
    "source": [
     "First, we set up the RPA simulation. We will consider a triangular nanoflake"
@@ -35,13 +35,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "70a49c53",
+   "id": "21495235",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:10.090965Z",
-     "iopub.status.busy": "2025-02-03T13:26:10.090773Z",
-     "iopub.status.idle": "2025-02-03T13:26:13.519497Z",
-     "shell.execute_reply": "2025-02-03T13:26:13.518987Z"
+     "iopub.execute_input": "2025-02-03T14:15:29.352981Z",
+     "iopub.status.busy": "2025-02-03T14:15:29.352797Z",
+     "iopub.status.idle": "2025-02-03T14:15:32.979302Z",
+     "shell.execute_reply": "2025-02-03T14:15:32.978674Z"
     },
     "lines_to_next_cell": 2
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c20d05ec",
+   "id": "c162cfad",
    "metadata": {},
    "source": [
     "We obtain the polarizability for a uniform external field according to "
@@ -81,15 +81,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59a4d808",
+   "id": "ab80850d",
    "metadata": {},
    "source": [
-    "$$\\alpha_{ij}(\\omega) = x_j \\chi_0(\\omega)/ (1- C \\chi_0(\\omega)) x_i$$,"
+    "$$\\\\alpha_{ij}(\\omega) = x_j \\chi_0(\\omega)/ (1- C \\chi_0(\\omega)) x_i$$,"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b5d2b5a4",
+   "id": "27556435",
    "metadata": {},
    "source": [
     "where $\\chi_0(\\omega)$ is the bare density-density correlator and $C$ is the Coulomb matrix, as in [Thongrattanasiri et al.](https://pubs.acs.org/doi/10.1021/nn204780e)"
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ee59683",
+   "id": "7230b0f5",
    "metadata": {},
    "source": [
     "Here, we focus on an external x-polarized field"
@@ -106,13 +106,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "88f3de7e",
+   "id": "66de80c8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:13.521786Z",
-     "iopub.status.busy": "2025-02-03T13:26:13.521256Z",
-     "iopub.status.idle": "2025-02-03T13:26:23.578362Z",
-     "shell.execute_reply": "2025-02-03T13:26:23.577739Z"
+     "iopub.execute_input": "2025-02-03T14:15:32.981741Z",
+     "iopub.status.busy": "2025-02-03T14:15:32.981318Z",
+     "iopub.status.idle": "2025-02-03T14:15:43.429605Z",
+     "shell.execute_reply": "2025-02-03T14:15:43.428960Z"
     }
    },
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f61a2bce",
+   "id": "ad60375c",
    "metadata": {},
    "source": [
     "From the imaginary part of the polarizability, we obtain the absorption spectrum as follows"
@@ -135,13 +135,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fd4e9c77",
+   "id": "62f48c65",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:23.581048Z",
-     "iopub.status.busy": "2025-02-03T13:26:23.580804Z",
-     "iopub.status.idle": "2025-02-03T13:26:23.660548Z",
-     "shell.execute_reply": "2025-02-03T13:26:23.659991Z"
+     "iopub.execute_input": "2025-02-03T14:15:43.432596Z",
+     "iopub.status.busy": "2025-02-03T14:15:43.432360Z",
+     "iopub.status.idle": "2025-02-03T14:15:43.519313Z",
+     "shell.execute_reply": "2025-02-03T14:15:43.518811Z"
     }
    },
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2964b9e2",
+   "id": "0237906b",
    "metadata": {},
    "source": [
     "## Time-domain simulations"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07c58024",
+   "id": "4513d59a",
    "metadata": {},
    "source": [
     "For the time-domain simulations, we specify a spectrally broad external illumination (i.e. a narrow pulse in time domain) to capture the system's response over a large frequency range."
@@ -168,13 +168,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "667a5304",
+   "id": "685ec7f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:23.663864Z",
-     "iopub.status.busy": "2025-02-03T13:26:23.662974Z",
-     "iopub.status.idle": "2025-02-03T13:26:23.687794Z",
-     "shell.execute_reply": "2025-02-03T13:26:23.687346Z"
+     "iopub.execute_input": "2025-02-03T14:15:43.522308Z",
+     "iopub.status.busy": "2025-02-03T14:15:43.522094Z",
+     "iopub.status.idle": "2025-02-03T14:15:43.548090Z",
+     "shell.execute_reply": "2025-02-03T14:15:43.547452Z"
     }
    },
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ad1e329",
+   "id": "b05589f0",
    "metadata": {},
    "source": [
     "We then compute the time-dependent dipole moment and Fourier transform it."
@@ -196,13 +196,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "070c69ff",
+   "id": "47ee7922",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:23.689827Z",
-     "iopub.status.busy": "2025-02-03T13:26:23.689509Z",
-     "iopub.status.idle": "2025-02-03T13:26:25.441784Z",
-     "shell.execute_reply": "2025-02-03T13:26:25.441156Z"
+     "iopub.execute_input": "2025-02-03T14:15:43.550376Z",
+     "iopub.status.busy": "2025-02-03T14:15:43.550183Z",
+     "iopub.status.idle": "2025-02-03T14:15:45.358323Z",
+     "shell.execute_reply": "2025-02-03T14:15:45.357792Z"
     }
    },
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ecc6967",
+   "id": "a8bbb852",
    "metadata": {},
    "source": [
     "The polarizability tensor is given by $\\alpha_{ij} = p_i / E_j$. Here, we investigate the xx-component."
@@ -242,13 +242,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0b8ce76e",
+   "id": "f1ed3eb1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:25.443694Z",
-     "iopub.status.busy": "2025-02-03T13:26:25.443507Z",
-     "iopub.status.idle": "2025-02-03T13:26:25.870935Z",
-     "shell.execute_reply": "2025-02-03T13:26:25.870333Z"
+     "iopub.execute_input": "2025-02-03T14:15:45.360366Z",
+     "iopub.status.busy": "2025-02-03T14:15:45.359995Z",
+     "iopub.status.idle": "2025-02-03T14:15:45.839716Z",
+     "shell.execute_reply": "2025-02-03T14:15:45.839091Z"
     }
    },
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "756b0df5",
+   "id": "9a502dea",
    "metadata": {},
    "source": [
     "We can now compare the two results."
@@ -271,13 +271,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2df5838d",
+   "id": "b4bd6703",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:25.873096Z",
-     "iopub.status.busy": "2025-02-03T13:26:25.872892Z",
-     "iopub.status.idle": "2025-02-03T13:26:26.303095Z",
-     "shell.execute_reply": "2025-02-03T13:26:26.302482Z"
+     "iopub.execute_input": "2025-02-03T14:15:45.842159Z",
+     "iopub.status.busy": "2025-02-03T14:15:45.841806Z",
+     "iopub.status.idle": "2025-02-03T14:15:46.284130Z",
+     "shell.execute_reply": "2025-02-03T14:15:46.283497Z"
     },
     "lines_to_next_cell": 0
    },
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b6c882f",
+   "id": "2d9439ab",
    "metadata": {},
    "outputs": [],
    "source": []
