--- a/tutorials/g_td_sim.ipynb
+++ b/tutorials/g_td_sim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "64741bdf",
+   "id": "9d0f5d9a",
    "metadata": {},
    "source": [
     "# Time-Domain simulations\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "104fed61",
+   "id": "df53727b",
    "metadata": {},
    "source": [
     "We introduce time-domain simulations, which are based on GRANAD's default master equation"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e46c46d",
+   "id": "aed24fd9",
    "metadata": {},
    "source": [
     "$$\\dot{\\rho}(t) = -i [H[t,\\rho(t)], \\rho] + \\mathcal{D}[t, \\rho]$$"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2882518",
+   "id": "a5745881",
    "metadata": {},
    "source": [
     "The Hamiltonian is non-linear in the sense that the Coulomb term depends on the charge electronic distribution given by the time-dependent density matrix:"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "667b99d8",
+   "id": "97e9481f",
    "metadata": {},
    "source": [
     "$$H[t,\\rho(t)] = h^{0} + \\vec{E} \\vec{P} + C(\\rho(t) - \\rho^{0})$$"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41298524",
+   "id": "4162110f",
    "metadata": {},
    "source": [
     "where "
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26369e4c",
+   "id": "f95b0948",
    "metadata": {},
    "source": [
     "1. $h^{0}$ is the single-particle tight-binding Hamiltonian constructed from localized orbitals.\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2be5eede",
+   "id": "32be5ed9",
    "metadata": {},
    "source": [
     "This expression is the dipole-gauge expression for the Hamiltonian including an external electric field $\\vec{E}$."
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8bc53b3",
+   "id": "a69e5a05",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e35e2f21",
+   "id": "2f1b069f",
    "metadata": {},
    "source": [
     "You can compute multiple observables in one simulation run"
@@ -87,13 +87,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4130607d",
+   "id": "1293ce5e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:47.401431Z",
-     "iopub.status.busy": "2025-02-03T13:26:47.401014Z",
-     "iopub.status.idle": "2025-02-03T13:26:55.902354Z",
-     "shell.execute_reply": "2025-02-03T13:26:55.901802Z"
+     "iopub.execute_input": "2025-02-03T14:16:08.279099Z",
+     "iopub.status.busy": "2025-02-03T14:16:08.278923Z",
+     "iopub.status.idle": "2025-02-03T14:16:17.236621Z",
+     "shell.execute_reply": "2025-02-03T14:16:17.236111Z"
     }
    },
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad045426",
+   "id": "7e3f2b3f",
    "metadata": {},
    "source": [
     "The result object stores this information. Operators are concatenated in the order you passed them in."
@@ -149,13 +149,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "256ade14",
+   "id": "8f0d30ad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:55.904190Z",
-     "iopub.status.busy": "2025-02-03T13:26:55.904009Z",
-     "iopub.status.idle": "2025-02-03T13:26:55.907599Z",
-     "shell.execute_reply": "2025-02-03T13:26:55.907062Z"
+     "iopub.execute_input": "2025-02-03T14:16:17.238796Z",
+     "iopub.status.busy": "2025-02-03T14:16:17.238399Z",
+     "iopub.status.idle": "2025-02-03T14:16:17.241798Z",
+     "shell.execute_reply": "2025-02-03T14:16:17.241242Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78dcf202",
+   "id": "fdef06a3",
    "metadata": {},
    "source": [
     "The induced dipole moment at timestep 10 is given by"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8459aa2d",
+   "id": "679990ec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:55.909289Z",
-     "iopub.status.busy": "2025-02-03T13:26:55.908944Z",
-     "iopub.status.idle": "2025-02-03T13:26:55.933416Z",
-     "shell.execute_reply": "2025-02-03T13:26:55.932853Z"
+     "iopub.execute_input": "2025-02-03T14:16:17.243789Z",
+     "iopub.status.busy": "2025-02-03T14:16:17.243417Z",
+     "iopub.status.idle": "2025-02-03T14:16:17.269541Z",
+     "shell.execute_reply": "2025-02-03T14:16:17.269023Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85ed392b",
+   "id": "5a4e206b",
    "metadata": {},
    "source": [
     "Induced current at timestep 10"
@@ -217,13 +217,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cc02deee",
+   "id": "c4194864",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:55.935420Z",
-     "iopub.status.busy": "2025-02-03T13:26:55.935078Z",
-     "iopub.status.idle": "2025-02-03T13:26:55.939186Z",
-     "shell.execute_reply": "2025-02-03T13:26:55.938574Z"
+     "iopub.execute_input": "2025-02-03T14:16:17.271410Z",
+     "iopub.status.busy": "2025-02-03T14:16:17.271112Z",
+     "iopub.status.idle": "2025-02-03T14:16:17.275460Z",
+     "shell.execute_reply": "2025-02-03T14:16:17.274886Z"
     },
     "lines_to_next_cell": 2
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df7d0bd7",
+   "id": "fffddb33",
    "metadata": {},
    "source": [
     "We can access the Fourier transform as"
@@ -252,13 +252,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b68cbb6f",
+   "id": "f8c68db6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:55.941058Z",
-     "iopub.status.busy": "2025-02-03T13:26:55.940612Z",
-     "iopub.status.idle": "2025-02-03T13:26:56.309031Z",
-     "shell.execute_reply": "2025-02-03T13:26:56.308494Z"
+     "iopub.execute_input": "2025-02-03T14:16:17.277371Z",
+     "iopub.status.busy": "2025-02-03T14:16:17.277026Z",
+     "iopub.status.idle": "2025-02-03T14:16:17.683532Z",
+     "shell.execute_reply": "2025-02-03T14:16:17.683019Z"
     }
    },
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3435f907",
+   "id": "62a40b24",
    "metadata": {},
    "source": [
     "The incident field is accessible via result.td_illumination, e.g.,"
@@ -279,13 +279,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7f9025ba",
+   "id": "d749c6fa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:56.311261Z",
-     "iopub.status.busy": "2025-02-03T13:26:56.310904Z",
-     "iopub.status.idle": "2025-02-03T13:26:56.314319Z",
-     "shell.execute_reply": "2025-02-03T13:26:56.313740Z"
+     "iopub.execute_input": "2025-02-03T14:16:17.685730Z",
+     "iopub.status.busy": "2025-02-03T14:16:17.685290Z",
+     "iopub.status.idle": "2025-02-03T14:16:17.688925Z",
+     "shell.execute_reply": "2025-02-03T14:16:17.688386Z"
     }
    },
    "outputs": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d18cb259",
+   "id": "45c497f9",
    "metadata": {},
    "source": [
     "# Continuity equation example"
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49b3e7c1",
+   "id": "4e6e6e59",
    "metadata": {},
    "source": [
     "From the classical continuity equation for the charge and current density $\\rho(\\vec{r},t), \\vec{j}(\\vec{r},t)$ and dipole moment density $\\vec{p}(\\vec{r},t)$, we have"
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdd6e05d",
+   "id": "bb4a7250",
    "metadata": {},
    "source": [
     "$$\\dot{\\rho}(\\vec{r}, t) = -\\nabla \\vec{j}(\\vec{r}, t) = \\nabla \\dot{\\vec{p}}(\\vec{r}, t) \\implies \\dot{\\vec{p}}(\\vec{r},t) = \\vec{j}(\\vec{r},t)$$"
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6176e874",
+   "id": "43d6dec4",
    "metadata": {},
    "source": [
     "After Fourier transformation, we obtain"
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5dede9d",
+   "id": "0132c4be",
    "metadata": {},
    "source": [
     "$$-i\\omega \\vec{p}(\\vec{r}, \\omega) = \\vec{j}(\\vec{r}, \\omega)$$"
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "934b09c5",
+   "id": "5bf0b63c",
    "metadata": {},
    "source": [
     "Its integrated form is given by"
@@ -351,31 +351,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51ef6a5d",
+   "id": "01a42694",
    "metadata": {},
    "source": [
-    "$$\\int d\\vec{r} \\dot{\\vec{p}}(\\vec{r},t) = \\dot{\\vec{p}}(t) = \\int d\\vec{r} \\vec{j}(\\vec{r},t) =  \\vec{j}(t)$$ "
+    "$$\\sum_i \\dot{\\vec{p}}(\\vec{r}_i,t) = \\dot{\\vec{p}}(t) = \\sum_i d\\vec{r} \\vec{j}(\\vec{r}_i,t) =  \\vec{j}(t)$$ "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fce79f35",
+   "id": "f40b2bb8",
    "metadata": {},
    "source": [
-    "$\\vec{j}(t)$ and $\\vec{p}(t)$ are the total current and dipole moment respectively. We can\n",
-    "obtain their expectation values directly from the time-domain simulations. The continuity equation above can be verified as follows"
+    "$\\vec{j}(t)$ and $\\vec{p}(t)$ are the total current and dipole moment respectively and we have taken the spatially discrete basis into account. We can obtain operator expectation values directly from the time-domain simulations. The continuity equation above can be verified as follows"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "626b51ba",
+   "id": "6a20eb40",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:56.316370Z",
-     "iopub.status.busy": "2025-02-03T13:26:56.315925Z",
-     "iopub.status.idle": "2025-02-03T13:26:56.716604Z",
-     "shell.execute_reply": "2025-02-03T13:26:56.716028Z"
+     "iopub.execute_input": "2025-02-03T14:16:17.691047Z",
+     "iopub.status.busy": "2025-02-03T14:16:17.690673Z",
+     "iopub.status.idle": "2025-02-03T14:16:18.111371Z",
+     "shell.execute_reply": "2025-02-03T14:16:18.110782Z"
     },
     "lines_to_next_cell": 2
    },
@@ -405,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0f0f120",
+   "id": "aa8835e4",
    "metadata": {},
    "source": [
     "## Density matrices"
@@ -413,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65e3074f",
+   "id": "b0263253",
    "metadata": {},
    "source": [
     "If we want to find the time-dependent density matrices, we can omit the operator list. The result object then contains a one-element list."
@@ -422,13 +421,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7d4e0395",
+   "id": "ed5ebe3a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:56.718679Z",
-     "iopub.status.busy": "2025-02-03T13:26:56.718257Z",
-     "iopub.status.idle": "2025-02-03T13:26:59.353483Z",
-     "shell.execute_reply": "2025-02-03T13:26:59.352969Z"
+     "iopub.execute_input": "2025-02-03T14:16:18.113537Z",
+     "iopub.status.busy": "2025-02-03T14:16:18.113129Z",
+     "iopub.status.idle": "2025-02-03T14:16:20.762304Z",
+     "shell.execute_reply": "2025-02-03T14:16:20.761798Z"
     }
    },
    "outputs": [
@@ -469,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4af178e",
+   "id": "30027364",
    "metadata": {},
    "source": [
     "We can convert them to energy basis"
@@ -478,13 +477,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "50c631df",
+   "id": "5857f5b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:26:59.355505Z",
-     "iopub.status.busy": "2025-02-03T13:26:59.355142Z",
-     "iopub.status.idle": "2025-02-03T13:27:01.292644Z",
-     "shell.execute_reply": "2025-02-03T13:27:01.292185Z"
+     "iopub.execute_input": "2025-02-03T14:16:20.764165Z",
+     "iopub.status.busy": "2025-02-03T14:16:20.763866Z",
+     "iopub.status.idle": "2025-02-03T14:16:22.699371Z",
+     "shell.execute_reply": "2025-02-03T14:16:22.698755Z"
     }
    },
    "outputs": [
@@ -503,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a03b2252",
+   "id": "7eaf8622",
    "metadata": {},
    "source": [
     "## Occupations"
@@ -511,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c185abeb",
+   "id": "ada2215e",
    "metadata": {},
    "source": [
     "To reduce memory consumption, we can extract only the site occupations to avoid storing the entire stack of density matices in memory."
@@ -520,13 +519,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3dc35ceb",
+   "id": "7159fa3e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:27:01.294650Z",
-     "iopub.status.busy": "2025-02-03T13:27:01.294139Z",
-     "iopub.status.idle": "2025-02-03T13:27:03.878840Z",
-     "shell.execute_reply": "2025-02-03T13:27:03.878261Z"
+     "iopub.execute_input": "2025-02-03T14:16:22.701364Z",
+     "iopub.status.busy": "2025-02-03T14:16:22.701072Z",
+     "iopub.status.idle": "2025-02-03T14:16:25.278249Z",
+     "shell.execute_reply": "2025-02-03T14:16:25.277671Z"
     }
    },
    "outputs": [
@@ -567,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df09835b",
+   "id": "bd6a47a9",
    "metadata": {},
    "source": [
     "Further reduction of the memory consumption can be controlled by the grid argument, which describes the density of the time domain sampling grid, explained in the API section on the `master_equation` method."
@@ -575,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbcadc42",
+   "id": "122db0dd",
    "metadata": {},
    "source": [
     "## Energy occupations"
@@ -583,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a75ea82f",
+   "id": "aba4cacd",
    "metadata": {},
    "source": [
     "Similarly to site occupations, energy occupations can also be obtained from the time-domain simulations."
@@ -591,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8cd55d8",
+   "id": "d7bbc6af",
    "metadata": {},
    "source": [
     "*Warning*: this introduces additional cubic complexity "
@@ -600,13 +599,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8927aca2",
+   "id": "a8eb2595",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:27:03.881126Z",
-     "iopub.status.busy": "2025-02-03T13:27:03.880616Z",
-     "iopub.status.idle": "2025-02-03T13:27:09.620196Z",
-     "shell.execute_reply": "2025-02-03T13:27:09.619660Z"
+     "iopub.execute_input": "2025-02-03T14:16:25.280234Z",
+     "iopub.status.busy": "2025-02-03T14:16:25.279898Z",
+     "iopub.status.idle": "2025-02-03T14:16:31.055982Z",
+     "shell.execute_reply": "2025-02-03T14:16:31.055366Z"
     }
    },
    "outputs": [
@@ -654,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "018e6ca4",
+   "id": "46b058de",
    "metadata": {},
    "source": [
     "## Initially excited states"
@@ -662,7 +661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "421a3c77",
+   "id": "e004bf99",
    "metadata": {},
    "source": [
     "GRANAD allows to set initially excited states by specifying the single-particle transition in the density matrix as follows"
@@ -671,13 +670,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2c65076b",
+   "id": "3649976f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:27:09.622201Z",
-     "iopub.status.busy": "2025-02-03T13:27:09.621813Z",
-     "iopub.status.idle": "2025-02-03T13:27:11.012818Z",
-     "shell.execute_reply": "2025-02-03T13:27:11.012211Z"
+     "iopub.execute_input": "2025-02-03T14:16:31.057880Z",
+     "iopub.status.busy": "2025-02-03T14:16:31.057639Z",
+     "iopub.status.idle": "2025-02-03T14:16:32.467227Z",
+     "shell.execute_reply": "2025-02-03T14:16:32.466688Z"
     }
    },
    "outputs": [
@@ -699,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c70c5a89",
+   "id": "9a463b52",
    "metadata": {},
    "source": [
     "In case of degeneracies, GRANAD distributes electrons equally among all degenerate energy levels, as demonstrated in the figure above."
@@ -707,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebd49674",
+   "id": "9ac29ee3",
    "metadata": {},
    "source": [
     "## Combinations"
@@ -715,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9d3f6a0",
+   "id": "c43927fd",
    "metadata": {},
    "source": [
     "We can also extract multiple quantities at the same time"
@@ -724,13 +723,13 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1055fc1d",
+   "id": "a4e239f6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:27:11.014727Z",
-     "iopub.status.busy": "2025-02-03T13:27:11.014539Z",
-     "iopub.status.idle": "2025-02-03T13:27:13.915539Z",
-     "shell.execute_reply": "2025-02-03T13:27:13.915032Z"
+     "iopub.execute_input": "2025-02-03T14:16:32.469092Z",
+     "iopub.status.busy": "2025-02-03T14:16:32.468909Z",
+     "iopub.status.idle": "2025-02-03T14:16:35.335231Z",
+     "shell.execute_reply": "2025-02-03T14:16:35.334635Z"
     }
    },
    "outputs": [
@@ -769,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bca992a",
+   "id": "9dc3eac0",
    "metadata": {},
    "source": [
     "The output will now contain three arrays: induced dipole moments, site occupations and full density matrices"
@@ -778,13 +777,13 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1556de9b",
+   "id": "5db31946",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:27:13.917554Z",
-     "iopub.status.busy": "2025-02-03T13:27:13.917216Z",
-     "iopub.status.idle": "2025-02-03T13:27:13.921121Z",
-     "shell.execute_reply": "2025-02-03T13:27:13.920500Z"
+     "iopub.execute_input": "2025-02-03T14:16:35.337158Z",
+     "iopub.status.busy": "2025-02-03T14:16:35.336814Z",
+     "iopub.status.idle": "2025-02-03T14:16:35.340569Z",
+     "shell.execute_reply": "2025-02-03T14:16:35.340000Z"
     }
    },
    "outputs": [
@@ -808,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b96c8c34",
+   "id": "192a87d2",
    "metadata": {},
    "source": [
     "## EPI"
@@ -816,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ab4afce",
+   "id": "45ed010a",
    "metadata": {},
    "source": [
     "The energy-based plasmonicity index introduced by [Müller et al.](https://pubs.acs.org/doi/10.1021/acs.jpcc.0c07964) is a quantity to characterize the steady-state plasmonicity. We use plane wave illumination to drive the system into a steady state and then compute the EPI."
@@ -825,13 +824,13 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "adecf261",
+   "id": "e74ec2f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:27:13.922893Z",
-     "iopub.status.busy": "2025-02-03T13:27:13.922546Z",
-     "iopub.status.idle": "2025-02-03T13:27:16.759862Z",
-     "shell.execute_reply": "2025-02-03T13:27:16.759375Z"
+     "iopub.execute_input": "2025-02-03T14:16:35.342164Z",
+     "iopub.status.busy": "2025-02-03T14:16:35.341975Z",
+     "iopub.status.idle": "2025-02-03T14:16:38.207963Z",
+     "shell.execute_reply": "2025-02-03T14:16:38.207445Z"
     },
     "lines_to_next_cell": 2
    },
@@ -885,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "202f5ccd",
+   "id": "93e0c453",
    "metadata": {},
    "source": [
     "## Important note\n",
