--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "71c132e6",
+   "id": "1e8312e7",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abeb22a8",
+   "id": "9442660f",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6eb48a4",
+   "id": "4ca6081b",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf2ff140",
+   "id": "43d6ad98",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b331bf6",
+   "id": "61864e3f",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5607ef7",
+   "id": "aabca3f7",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "748a3a94",
+   "id": "197221f5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:25:28.530135Z",
-     "iopub.status.busy": "2025-02-03T13:25:28.529935Z",
-     "iopub.status.idle": "2025-02-03T13:25:31.515377Z",
-     "shell.execute_reply": "2025-02-03T13:25:31.514855Z"
+     "iopub.execute_input": "2025-02-03T14:14:45.368635Z",
+     "iopub.status.busy": "2025-02-03T14:14:45.368460Z",
+     "iopub.status.idle": "2025-02-03T14:14:48.545644Z",
+     "shell.execute_reply": "2025-02-03T14:14:48.545048Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2491ea5",
+   "id": "0ed3f819",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1bb1ff7",
+   "id": "87a4007a",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85a089a2",
+   "id": "dd0673a9",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b078917",
+   "id": "9d117ef1",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a437290",
+   "id": "5c03e621",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e296b9c5",
+   "id": "bfbd41b4",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81a7e42f",
+   "id": "efde1729",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bff32dd4",
+   "id": "4866c3cd",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3c157a21",
+   "id": "b353d3e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:25:31.517467Z",
-     "iopub.status.busy": "2025-02-03T13:25:31.517221Z",
-     "iopub.status.idle": "2025-02-03T13:25:33.409241Z",
-     "shell.execute_reply": "2025-02-03T13:25:33.408607Z"
+     "iopub.execute_input": "2025-02-03T14:14:48.548040Z",
+     "iopub.status.busy": "2025-02-03T14:14:48.547586Z",
+     "iopub.status.idle": "2025-02-03T14:14:50.656520Z",
+     "shell.execute_reply": "2025-02-03T14:14:50.655926Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ea86204",
+   "id": "4dec4c5a",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "53732189",
+   "id": "eedfece6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:25:33.411204Z",
-     "iopub.status.busy": "2025-02-03T13:25:33.410848Z",
-     "iopub.status.idle": "2025-02-03T13:25:33.414347Z",
-     "shell.execute_reply": "2025-02-03T13:25:33.413762Z"
+     "iopub.execute_input": "2025-02-03T14:14:50.658531Z",
+     "iopub.status.busy": "2025-02-03T14:14:50.658104Z",
+     "iopub.status.idle": "2025-02-03T14:14:50.661645Z",
+     "shell.execute_reply": "2025-02-03T14:14:50.661025Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0122dce7",
+   "id": "984f36ce",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f10ef69",
+   "id": "a1a6967c",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2642a4c1",
+   "id": "e04310ea",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40eef0fb",
+   "id": "e02e706c",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cc2b606d",
+   "id": "7c23fa82",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:25:33.416145Z",
-     "iopub.status.busy": "2025-02-03T13:25:33.415778Z",
-     "iopub.status.idle": "2025-02-03T13:25:33.458745Z",
-     "shell.execute_reply": "2025-02-03T13:25:33.458217Z"
+     "iopub.execute_input": "2025-02-03T14:14:50.663533Z",
+     "iopub.status.busy": "2025-02-03T14:14:50.663217Z",
+     "iopub.status.idle": "2025-02-03T14:14:50.708348Z",
+     "shell.execute_reply": "2025-02-03T14:14:50.707778Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68e9bf00",
+   "id": "f4421939",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9ce9edfc",
+   "id": "56e686df",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:25:33.460564Z",
-     "iopub.status.busy": "2025-02-03T13:25:33.460379Z",
-     "iopub.status.idle": "2025-02-03T13:25:33.526687Z",
-     "shell.execute_reply": "2025-02-03T13:25:33.526175Z"
+     "iopub.execute_input": "2025-02-03T14:14:50.710250Z",
+     "iopub.status.busy": "2025-02-03T14:14:50.709903Z",
+     "iopub.status.idle": "2025-02-03T14:14:50.780384Z",
+     "shell.execute_reply": "2025-02-03T14:14:50.779889Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68d4f2ea",
+   "id": "bba49962",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dbbed43",
+   "id": "a4205a23",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "83d46c17",
+   "id": "eb79802a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:25:33.528838Z",
-     "iopub.status.busy": "2025-02-03T13:25:33.528435Z",
-     "iopub.status.idle": "2025-02-03T13:25:33.554920Z",
-     "shell.execute_reply": "2025-02-03T13:25:33.554347Z"
+     "iopub.execute_input": "2025-02-03T14:14:50.782148Z",
+     "iopub.status.busy": "2025-02-03T14:14:50.781978Z",
+     "iopub.status.idle": "2025-02-03T14:14:50.810469Z",
+     "shell.execute_reply": "2025-02-03T14:14:50.809927Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9b5f0da",
+   "id": "547b7517",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14812332",
+   "id": "a4de9853",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53b23eca",
+   "id": "a3e00b70",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31492db0",
+   "id": "8af75768",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d5ed426",
+   "id": "2464b22d",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5cff8e12",
+   "id": "e8daf97a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:25:33.557096Z",
-     "iopub.status.busy": "2025-02-03T13:25:33.556657Z",
-     "iopub.status.idle": "2025-02-03T13:25:33.560877Z",
-     "shell.execute_reply": "2025-02-03T13:25:33.560195Z"
+     "iopub.execute_input": "2025-02-03T14:14:50.812403Z",
+     "iopub.status.busy": "2025-02-03T14:14:50.812216Z",
+     "iopub.status.idle": "2025-02-03T14:14:50.816431Z",
+     "shell.execute_reply": "2025-02-03T14:14:50.815942Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "695b0484",
+   "id": "051587d5",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "33ef971e",
+   "id": "6df327f6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:25:33.562898Z",
-     "iopub.status.busy": "2025-02-03T13:25:33.562435Z",
-     "iopub.status.idle": "2025-02-03T13:25:33.565529Z",
-     "shell.execute_reply": "2025-02-03T13:25:33.564872Z"
+     "iopub.execute_input": "2025-02-03T14:14:50.818462Z",
+     "iopub.status.busy": "2025-02-03T14:14:50.818010Z",
+     "iopub.status.idle": "2025-02-03T14:14:50.821022Z",
+     "shell.execute_reply": "2025-02-03T14:14:50.820451Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ab9deaa",
+   "id": "80171877",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1242f231",
+   "id": "dd5994bc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:25:33.567347Z",
-     "iopub.status.busy": "2025-02-03T13:25:33.566903Z",
-     "iopub.status.idle": "2025-02-03T13:25:36.095966Z",
-     "shell.execute_reply": "2025-02-03T13:25:36.095344Z"
+     "iopub.execute_input": "2025-02-03T14:14:50.823033Z",
+     "iopub.status.busy": "2025-02-03T14:14:50.822706Z",
+     "iopub.status.idle": "2025-02-03T14:14:53.420244Z",
+     "shell.execute_reply": "2025-02-03T14:14:53.419615Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ac898a7",
+   "id": "3d828e95",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1053729b",
+   "id": "5a9bb769",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0034618a",
+   "id": "a054f4f0",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aca825bf",
+   "id": "e0a25e53",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "689edb94",
+   "id": "363acc11",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:25:36.098231Z",
-     "iopub.status.busy": "2025-02-03T13:25:36.097719Z",
-     "iopub.status.idle": "2025-02-03T13:25:36.101248Z",
-     "shell.execute_reply": "2025-02-03T13:25:36.100752Z"
+     "iopub.execute_input": "2025-02-03T14:14:53.422527Z",
+     "iopub.status.busy": "2025-02-03T14:14:53.422100Z",
+     "iopub.status.idle": "2025-02-03T14:14:53.425713Z",
+     "shell.execute_reply": "2025-02-03T14:14:53.425243Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f8adfedbe20>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7feddc02be20>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b52a0ede",
+   "id": "631b19e3",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87d4b1d5",
+   "id": "8c75d0f5",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81dfd9c7",
+   "id": "5d61798c",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3561912",
+   "id": "7697622e",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "435a2957",
+   "id": "8086631e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:25:36.103150Z",
-     "iopub.status.busy": "2025-02-03T13:25:36.102775Z",
-     "iopub.status.idle": "2025-02-03T13:25:36.105755Z",
-     "shell.execute_reply": "2025-02-03T13:25:36.105299Z"
+     "iopub.execute_input": "2025-02-03T14:14:53.427536Z",
+     "iopub.status.busy": "2025-02-03T14:14:53.427355Z",
+     "iopub.status.idle": "2025-02-03T14:14:53.430436Z",
+     "shell.execute_reply": "2025-02-03T14:14:53.429880Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6df0fa77",
+   "id": "389aaf33",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:25:36.107454Z",
-     "iopub.status.busy": "2025-02-03T13:25:36.107112Z",
-     "iopub.status.idle": "2025-02-03T13:25:37.160012Z",
-     "shell.execute_reply": "2025-02-03T13:25:37.159423Z"
+     "iopub.execute_input": "2025-02-03T14:14:53.432203Z",
+     "iopub.status.busy": "2025-02-03T14:14:53.431865Z",
+     "iopub.status.idle": "2025-02-03T14:14:54.498590Z",
+     "shell.execute_reply": "2025-02-03T14:14:54.498078Z"
     }
    },
    "outputs": [
